--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     
     <body>
 
-        <section class="preloader">
+        <section>
             <div class="spinner">
                 <span class="spinner-rotate"></span>    
             </div>
